# bellatrix-backend

./: Cargo.toml  Dockerfile  README.md  compose.yaml
src/: lib.rs  main.rs
src/config/: data.rs  mod.rs
src/constants/: default_page_size.rs  mod.rs
src/database/: mod.rs  mongo_db.rs  repositories.rs
src/models/: response.rs  user.rs
src/repository/: user.rs
src/routes/: config.rs  health_route.rs  mod.rs  not_found.rs  user.rs
src/utils/: http_response_builder.rs  mod.rs  mongo_error_builder.rs
