[package]
name = "bellatrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4.3.1"
bson = "2.6.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
mongodb = "2.6.0"
serde_json = "1.0.97"
