[package]
name = "bellatrix"
version = "0.1.0"
edition = "2021"
author = "David Bujosa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
bson = "2.6.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
mongodb = "2.6.0"
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.97"
